--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.username=root
-spring.datasource.password=GymKh!54327
+spring.datasource.password=123456
 spring.datasource.url=jdbc:mysql://localhost:3306/inventory
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
